# roulette

./: Cargo.toml  Dockerfile  bacon.toml  output
.github/workflows/: deploy-frontend.yml  server.yaml  server.yml
frontend/: index.html  package.json  sse.js
frontend/app/components/: LLMResponse.tsx  Prompt.tsx  Roulette.tsx
frontend/app/prompt/: prompt.tsx
frontend/app/routes/: home.tsx
src/: app.rs  db.rs  main.rs
src/migrations/: 1_setup_database.sql
src/models/: chatgpt.rs  claude.rs  gemini.rs  mod.rs  model.rs
