[package]
name = "roulette"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.100"
axum = { version = "0.8.6", features = ["http2", "macros"] }
futures = "0.3.31"
json = "0.12.4"
rand = "0.9.2"
reqwest = { version = "0.12.24", features = ["json"] }
reqwest-eventsource = "0.6.0"
tokio = { version = "1.48.0", features = ["rt-multi-thread"] }
sqlx = { version = "0.7", features = ["mysql", "runtime-tokio-native-tls"] }
dotenvy = "0.15.7"
